# 2D-boids-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  fish.cpp  fish.hpp  framerate.csv  framerateV1.csv  framerateV2.csv  frameratev1.csv  main.cpp  view_csv.py
src/: consts.hpp  fish.cpp  fish.hpp  main.cpp  sim_math.cpp  sim_math.hpp  simulation.cpp  simulation.hpp
tests/: CMakeLists.txt  test_alignment.cpp  test_boids.cpp  test_cohesion.cpp  test_getCollision.cpp  test_separation.cpp  test_seperation.cpp  test_sim_math.cpp
